Bump to v0.1.3